<resources>
    <string name="app_name">MAD Assignment</string>
    <string name="title_activity_proceed_to_order">ProceedToOrder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="todo">TODO</string>
    <string name="rating">5.0</string>
    <string name="time">30-40 min</string>
    <string name="price">Delivery - Rs.200/-</string>
    <string name="res1">res1</string>
    <string name="t">TODO</string>
    <string name="_30_40_min">30-40 min</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
</resources>